Fix minor issue

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <title>Personal Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;700&family=Roboto:wght@300;400;700&display=swap"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/all.min.css">
 </head>
 <body>
@@ -70,6 +69,8 @@
                                     <li><a target="_blank" href="https://github.com/suzonkhan"><i
                                             class="fab fa-github"></i></a>
                                     </li>
+                                    <li><a target="_blank" href="https://www.behance.net/suzonkhan"><i class="fab fa-behance"></i></i></a> </li>
+                                    <li><a target="_blank" href="https://dribbble.com/suzonkhan"><i class="fab fa-dribbble"></i></a> </li>
                                     <!--                    <li><a href="https://stackoverflow.com/users/4730382/suzon-khan"><i class="fab fa-stack-overflow"></i></a></li>-->
 
                                 </ul>
@@ -94,7 +95,7 @@
                 <!--row-->
                 <div class="row my-5">
                     <div class="col-md-12">
-                        <h3>Summary</h3>
+                        <h3 class="mb-3">Summary</h3>
                         <p>
                             I am a Frontend and WordPress Theme Developer.I am working this field since 2011. First of
                             all I am an award winner Frontend Developer and expert on UI. 100% pixel
@@ -107,7 +108,7 @@
                 <!--row-->
                 <div class="row mb-5">
                     <div class="col-md-12">
-                        <h3>Skills</h3>
+                        <h3 class="mb-3">Skills</h3>
                         <ul class="skill-list">
                             <li>Figma</li>
                             <li>Adobe XD</li>
@@ -137,13 +138,13 @@
                 <!--row-->
                 <div class="row mb-5">
                     <div class="col-md-12">
-                        <h3>Education</h3>
+                        <h3 class="mb-3">Education</h3>
                         <ul class="education-list">
                             <li><strong> Graduate (2014):</strong> National University, Bangladesh.</li>
                             <li><strong> Higher Secondary (2008):</strong> Khoshbush School and college, Barura,
-                                Camilla.
+                                Cumilla.
                             </li>
-                            <li><strong> Secondary School (2006):</strong> Moheshpur Aziza High School, Barura, Camilla.
+                            <li><strong> Secondary School (2006):</strong> Moheshpur Aziza High School, Barura, Cumilla.
                             </li>
                         </ul>
                     </div> <!--col-->
