Animation and Experience Added into about section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <title>Personal Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;700&family=Roboto:wght@300;400;700&display=swap"
+          rel="stylesheet">
     <link rel="stylesheet" href="css/all.min.css">
 </head>
 <body>
@@ -69,8 +70,10 @@
                                     <li><a target="_blank" href="https://github.com/suzonkhan"><i
                                             class="fab fa-github"></i></a>
                                     </li>
-                                    <li><a target="_blank" href="https://www.behance.net/suzonkhan"><i class="fab fa-behance"></i></i></a> </li>
-                                    <li><a target="_blank" href="https://dribbble.com/suzonkhan"><i class="fab fa-dribbble"></i></a> </li>
+                                    <li><a target="_blank" href="https://www.behance.net/suzonkhan"><i
+                                            class="fab fa-behance"></i></i></a></li>
+                                    <li><a target="_blank" href="https://dribbble.com/suzonkhan"><i
+                                            class="fab fa-dribbble"></i></a></li>
                                     <!--                    <li><a href="https://stackoverflow.com/users/4730382/suzon-khan"><i class="fab fa-stack-overflow"></i></a></li>-->
 
                                 </ul>
@@ -133,6 +136,91 @@
                             <li>MySQL</li>
                             <li>Git</li>
                         </ul>
+                    </div> <!--col-->
+                </div>
+                <!--row-->
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3 class="mb-3">Experience</h3>
+
+                    </div> <!--col-->
+                </div>
+                <!--row-->
+                <div class="row mb-5">
+                    <div class="col-md-6">
+                        <div class="card experience-card p-4">
+                            <div class="card-body">
+                                <a target="_blank" href="https://egeneration.co/"> <img width="180"
+                                                                                        src="images/egeneration-logo.png"
+                                                                                        alt=""></a>
+                                <!--                                <h4><a target="_blank" href="https://commengine.xyz/">CommEngine</a></h4>-->
+                                <p>UI Designer & Developer</p>
+                                <p>Oct 2021 – Running</p>
+                            </div>
+
+                        </div>
+                    </div> <!--col-->
+                    <div class="col-md-6">
+                        <div class="card experience-card p-4">
+                            <div class="card-body">
+                                <a target="_blank" href="https://commengine.xyz/"> <img width="180"
+                                                                                        src="images/commengine-logo.png"
+                                                                                        alt=""></a>
+                                <!--                                <h4><a target="_blank" href="https://commengine.xyz/">CommEngine</a></h4>-->
+                                <p>UI Designer & Developer</p>
+                                <p>March 2020 – September 2021</p>
+                            </div>
+
+                        </div>
+                    </div> <!--col-->
+                    <div class="col-md-6">
+                        <div class="card experience-card p-4">
+                            <div class="card-body">
+                                <a target="_blank" href="https://amadercode.com/"> <img
+                                        src="images/amader-code-lab-logo.svg" alt=""></a>
+
+                                <!--                                <h4><a target="_blank" href="https://commengine.xyz/">CommEngine</a></h4>-->
+                                <p>Front-end Developer</p>
+                                <p>April 2019 – February 2020</p>
+                            </div>
+
+                        </div>
+                    </div> <!--col-->
+                    <div class="col-md-6">
+                        <div class="card experience-card p-4">
+                            <div class="card-body">
+                                <a target="_blank" href="https://www.quantumcloud.com/"> <img
+                                        src="images/quantumcloud-logo.png" alt=""></a>
+
+                                <!--                                <h4><a target="_blank" href="https://commengine.xyz/">CommEngine</a></h4>-->
+                                <p>UI/UX Design & Developer</p>
+                                <p>October 2013 – March 2019</p>
+                            </div>
+
+                        </div>
+                    </div> <!--col-->
+                    <div class="col-md-6">
+                        <div class="card experience-card p-4">
+                            <div class="card-body">
+                                <a target="_blank" href="http://webbangladesh.net/"> <img
+                                        src="images/web-bangladesh-logo.png" alt=""></a>
+
+                                <!--                                <h4><a target="_blank" href="https://commengine.xyz/">CommEngine</a></h4>-->
+                                <p>Web Design & Developer</p>
+                                <p>February 2012 – September 2013</p>
+                            </div>
+
+                        </div>
+                    </div> <!--col-->
+                    <div class="col-md-6">
+                        <div class="card experience-card p-4">
+                            <div class="card-body">
+                                <h4><a target="_blank" href="http://www.innovationheaven.com/">Innovation Heaven</a></h4>
+                                <p>Web Developer</p>
+                                <p>February 2011 – January 2012</p>
+                            </div>
+
+                        </div>
                     </div> <!--col-->
                 </div>
                 <!--row-->
@@ -301,7 +389,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-4 offset-md-4 mb-3">
-                                     <input type="submit" value="Submit" class="btn btn-secondary w-100">
+                                    <input type="submit" value="Submit" class="btn btn-secondary w-100">
                                 </div>
                             </div>
                         </form>
