--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         <h3 class="mb-3">Education</h3>
                         <ul class="education-list">
                             <li><strong> Graduate (2014):</strong> National University, Bangladesh.</li>
-                            <li><strong> Higher Secondary (2008):</strong> Khoshbush School and college, Barura,
+                            <li><strong> Higher Secondary (2008):</strong> Khoshbush School and College, Barura,
                                 Cumilla.
                             </li>
                             <li><strong> Secondary School (2006):</strong> Moheshpur Aziza High School, Barura, Cumilla.
