Responsive Issue Fix

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/layout.css">
     <title>Abdur Rahman Suzon | Experienced Frontend & WordPress Theme Developer</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;700&family=Roboto:wght@300;400;700&display=swap"
@@ -21,6 +22,9 @@
         <div class="sidebar-inner">
             <div class="logo">
                 <img width="150" src="images/logo.png" alt="">
+            </div>
+            <div class="mobile-menu-trigger">
+                <button><span></span></button>
             </div>
             <div class="menu-area">
                 <div class="menu-area-inner">
@@ -147,7 +151,7 @@
                 </div>
                 <!--row-->
                 <div class="row mb-5">
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <div class="card experience-card p-4">
                             <div class="card-body">
                                 <a target="_blank" href="https://egeneration.co/"> <img width="180"
@@ -160,7 +164,7 @@
 
                         </div>
                     </div> <!--col-->
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <div class="card experience-card p-4">
                             <div class="card-body">
                                 <a target="_blank" href="https://commengine.xyz/"> <img width="180"
@@ -173,7 +177,7 @@
 
                         </div>
                     </div> <!--col-->
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <div class="card experience-card p-4">
                             <div class="card-body">
                                 <a target="_blank" href="https://amadercode.com/"> <img
@@ -186,7 +190,7 @@
 
                         </div>
                     </div> <!--col-->
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <div class="card experience-card p-4">
                             <div class="card-body">
                                 <a target="_blank" href="https://www.quantumcloud.com/"> <img
@@ -199,7 +203,7 @@
 
                         </div>
                     </div> <!--col-->
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <div class="card experience-card p-4">
                             <div class="card-body">
                                 <a target="_blank" href="http://webbangladesh.net/"> <img
@@ -212,10 +216,11 @@
 
                         </div>
                     </div> <!--col-->
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <div class="card experience-card p-4">
                             <div class="card-body">
-                                <h4><a target="_blank" href="http://www.innovationheaven.com/">Innovation Heaven</a></h4>
+                                <h4><a target="_blank" href="http://www.innovationheaven.com/">Innovation Heaven</a>
+                                </h4>
                                 <p>Web Developer</p>
                                 <p>February 2011 – January 2012</p>
                             </div>
