--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/all.min.css">
 </head>
 <body>
-<div class="wrapper">
+<div id="wrapper" class="wrapper">
     <div class="container">
         <div class="row">
             <div class="col-md-4">
@@ -472,6 +472,8 @@
 <!--wrapper-->
 <script src="js/jquery.min.js"></script>
 <script src="js/masonry.pkgd.min.js"></script>
+<script src="js/particles.min.js"></script>
+<script src="js/app.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
