--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             </ul>
                         </div>
                         <div class="download-cv">
-                            <a class="" href=""> <i class="fa fa-download"></i> Download CV</a>
+                            <a class="" href="images/Abdur-Rahman-Suzon-Resume.pdf"> <i class="fa fa-download"></i> Download CV</a>
                         </div>
                     </div>
                     <!--sidebar-->
