added service area

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                             </ul>
                         </div>
                         <div class="download-cv">
-                            <a class="" href="images/Abdur-Rahman-Suzon-Resume.pdf"> <i class="fa fa-download"></i> Download CV</a>
+                            <a class="" href="images/Abdur-Rahman-Suzon-Resume.pdf"> <i class="fa fa-download"></i>
+                                Download CV</a>
                         </div>
                     </div>
                     <!--sidebar-->
@@ -147,7 +148,57 @@
                                 </div> <!--col-->
                             </div>
                             <!--row-->
-                            
+                            <div class="row mb-5">
+                                <div class="col-md-12">
+                                    <h3 class="mb-4">What I do?</h3>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="service-box">
+
+                                            <i class="fas fa-swatchbook fa-2x"></i>
+                                            <h4> UI/UX Design</h4>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aut
+                                                dolorum.</p>
+
+
+                                    </div>
+                                </div> <!--col-->
+                                <div class="col-lg-6">
+                                    <div class="service-box">
+
+                                            <i class="fas fa-drafting-compass fa-2x"></i>
+                                            <h4> Frontend Development</h4>
+                                            <p>Dolorum ex, exercitationem illum quam quos repellat repudiandae tempore
+                                                vero.</p>
+
+
+                                    </div>
+                                </div> <!--col-->
+                                <div class="col-lg-6">
+                                    <div class="service-box">
+
+                                            <i class="fab fa-wordpress-simple fa-2x"></i>
+                                            <h4>WP Theme Development</h4>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aut
+                                                dolorum ex</p>
+
+
+                                    </div>
+                                </div> <!--col-->
+                                <div class="col-lg-6">
+                                    <div class="service-box">
+
+                                            <i class="fas fa-chart-line fa-2x"></i>
+                                            <h4>Digital Marketing & SEO</h4>
+                                            <p>Exercitationem illum quam quos repellat repudiandae tempore
+                                                vero.</p>
+
+
+                                    </div>
+                                </div> <!--col-->
+
+                            </div>
+                            <!--row-->
                         </div>
                     </section>
                     <section id="resume" class="page-section">
