added service content into first page

--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
                                 <div class="col-lg-6">
                                     <div class="service-box">
 
-                                            <i class="fas fa-swatchbook fa-2x"></i>
-                                            <h4> UI/UX Design</h4>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aut
-                                                dolorum.</p>
+                                        <i class="fas fa-swatchbook fa-2x"></i>
+                                        <h4> UI/UX Design</h4>
+                                        <p> Creating game-changing products that evoke a sense of excitement, closeness
+                                            and satisfaction for the user.</p>
 
 
                                     </div>
@@ -166,10 +166,10 @@
                                 <div class="col-lg-6">
                                     <div class="service-box">
 
-                                            <i class="fas fa-drafting-compass fa-2x"></i>
-                                            <h4> Frontend Development</h4>
-                                            <p>Dolorum ex, exercitationem illum quam quos repellat repudiandae tempore
-                                                vero.</p>
+                                        <i class="fas fa-drafting-compass fa-2x"></i>
+                                        <h4> Frontend Development</h4>
+                                        <p>Develop 100% pixel perfect and mobile friendly website from any UI
+                                            design. Also improving existing UI/UX for any application. </p>
 
 
                                     </div>
@@ -177,10 +177,10 @@
                                 <div class="col-lg-6">
                                     <div class="service-box">
 
-                                            <i class="fab fa-wordpress-simple fa-2x"></i>
-                                            <h4>WP Theme Development</h4>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aut
-                                                dolorum ex</p>
+                                        <i class="fab fa-wordpress-simple fa-2x"></i>
+                                        <h4>WP Theme Development</h4>
+                                        <p> I have developed 500+ WordPress website for different clients. Also develop
+                                            some premium WP theme for different marketplace </p>
 
 
                                     </div>
@@ -188,10 +188,10 @@
                                 <div class="col-lg-6">
                                     <div class="service-box">
 
-                                            <i class="fas fa-chart-line fa-2x"></i>
-                                            <h4>Digital Marketing & SEO</h4>
-                                            <p>Exercitationem illum quam quos repellat repudiandae tempore
-                                                vero.</p>
+                                        <i class="fas fa-chart-line fa-2x"></i>
+                                        <h4>Digital Marketing & SEO</h4>
+                                        <p> Doing digital marketing & SEO for my personal business and for my nearest
+                                            client. SEO skill helps to create optimize website for all.   </p>
 
 
                                     </div>
@@ -204,14 +204,14 @@
                     <section id="resume" class="page-section">
                         <div class="container">
 
-                            <div class="row my-5">
-                                <div class="col-md-12">
-                                    <h3 class="mb-3">Resume</h3>
+<!--                            <div class="row my-5">-->
+<!--                                <div class="col-md-12">-->
+<!--                                    <h3 class="mb-3">Resume</h3>-->
 
-                                </div> <!--col-->
-                            </div>
-                            <!--row-->
-                            <div class="row mb-5">
+<!--                                </div> -->
+<!--                            </div>-->
+
+                            <div class="row my-5">
                                 <div class="col-md-12">
                                     <h3 class="mb-3">Skills</h3>
                                     <ul class="skill-list">
