--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                                     <span>
                                             <strong>Phone</strong>
-                                              <a href="#home">01814758170</a>
+                                              <a href="tel:01814758170">01814758170</a>
                                         </span>
 
                                 </li>
@@ -74,7 +74,7 @@
 
                                     <span>
                                         <strong> Email</strong>
-                                            <a href="#about">arsuzon.khan@gmail.com</a>
+                                            <a href="mailto:arsuzon.khan@gmail.com">arsuzon.khan@gmail.com</a>
                                         </span>
                                 </li>
                                 <li>
@@ -84,7 +84,7 @@
 
                                     <span>
                                             <strong>Location</strong>
-                                            <a href="#portfolio">Mohammadpur, Dhaka</a>
+                                            <a target="_blank" href="https://goo.gl/maps/ChLibaE9HwTiGPSi9">Mohammadpur, Dhaka</a>
                                         </span>
                                 </li>
 
