responsive issue fix

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 </head>
 <body>
 <div id="wrapper" class="wrapper">
-    <div class="container">
+    <div class="page-container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <aside class="sidebar">
                     <div class="sidebar-inner">
                         <div class="profile-picture">
@@ -98,8 +98,8 @@
                     <!--sidebar-->
                 </aside>
             </div>
-            <div class="col-md-8">
-                <div class="page-container">
+            <div class="col-lg-8">
+                <main class="page-content">
                     <nav class="main-navigation">
                         <div class="menu-area-inner">
                             <ul>
@@ -130,20 +130,17 @@
 
                     </nav>
                     <section id="about" class="page-section active-section">
-                        <div class="container">
+                        <div class="container-lg">
 
-                            <div class="row my-5">
+                            <div class="row my-4">
                                 <div class="col-md-12">
                                     <h2 class="mb-3">About Me</h2>
                                     <p>
-                                        I am a Frontend and WordPress Theme Developer.I am working this field since
-                                        2011. First of
-                                        all I am an award winner Frontend Developer and expert on UI. 100% pixel
+                                        I am a Frontend and WordPress Theme Developer. Working this field since
+                                        2011. First of all, I am an award winner Frontend Developer and expert on UI/UX. 100% pixel
                                         perfect HTML/CSS conversions and cross browser combative job is a common task
-                                        for me. On the
-                                        other hand, I have been developing WordPress Theme since 2013. I love WordPress
-                                        and I am
-                                        very good at this.
+                                        for me. On the other hand, I have been developing WordPress Theme since 2013. I love WordPress
+                                        and I am very good at this.
                                     </p>
                                 </div> <!--col-->
                             </div>
@@ -152,7 +149,7 @@
                                 <div class="col-md-12">
                                     <h3 class="mb-4">What I do?</h3>
                                 </div>
-                                <div class="col-lg-6">
+                                <div class="col-sm-6">
                                     <div class="service-box">
 
                                         <i class="fas fa-swatchbook fa-2x"></i>
@@ -163,7 +160,7 @@
 
                                     </div>
                                 </div> <!--col-->
-                                <div class="col-lg-6">
+                                <div class="col-sm-6">
                                     <div class="service-box">
 
                                         <i class="fas fa-drafting-compass fa-2x"></i>
@@ -174,7 +171,7 @@
 
                                     </div>
                                 </div> <!--col-->
-                                <div class="col-lg-6">
+                                <div class="col-sm-6">
                                     <div class="service-box">
 
                                         <i class="fab fa-wordpress-simple fa-2x"></i>
@@ -185,7 +182,7 @@
 
                                     </div>
                                 </div> <!--col-->
-                                <div class="col-lg-6">
+                                <div class="col-sm-6">
                                     <div class="service-box">
 
                                         <i class="fas fa-chart-line fa-2x"></i>
@@ -202,7 +199,7 @@
                         </div>
                     </section>
                     <section id="resume" class="page-section">
-                        <div class="container">
+                        <div class="container-lg">
 
 <!--                            <div class="row my-5">-->
 <!--                                <div class="col-md-12">-->
@@ -211,7 +208,7 @@
 <!--                                </div> -->
 <!--                            </div>-->
 
-                            <div class="row my-5">
+                            <div class="row my-4">
                                 <div class="col-md-12">
                                     <h3 class="mb-3">Skills</h3>
                                     <ul class="skill-list">
@@ -249,7 +246,7 @@
                             </div>
                             <!--row-->
                             <div class="row mb-5">
-                                <div class="col-lg-6">
+                                <div class="col-sm-6">
                                     <div class="card experience-card p-4">
                                         <div class="card-body">
                                             <a target="_blank" href="https://egeneration.co/"> <img width="180"
@@ -262,7 +259,7 @@
 
                                     </div>
                                 </div> <!--col-->
-                                <div class="col-lg-6">
+                                <div class="col-sm-6">
                                     <div class="card experience-card p-4">
                                         <div class="card-body">
                                             <a target="_blank" href="https://commengine.xyz/"> <img width="180"
@@ -275,7 +272,7 @@
 
                                     </div>
                                 </div> <!--col-->
-                                <div class="col-lg-6">
+                                <div class="col-sm-6">
                                     <div class="card experience-card p-4">
                                         <div class="card-body">
                                             <a target="_blank" href="https://amadercode.com/"> <img
@@ -288,7 +285,7 @@
 
                                     </div>
                                 </div> <!--col-->
-                                <div class="col-lg-6">
+                                <div class="col-sm-6">
                                     <div class="card experience-card p-4">
                                         <div class="card-body">
                                             <a target="_blank" href="https://www.quantumcloud.com/"> <img
@@ -301,7 +298,7 @@
 
                                     </div>
                                 </div> <!--col-->
-                                <div class="col-lg-6">
+                                <div class="col-sm-6">
                                     <div class="card experience-card p-4">
                                         <div class="card-body">
                                             <a target="_blank" href="http://webbangladesh.net/"> <img
@@ -314,7 +311,7 @@
 
                                     </div>
                                 </div> <!--col-->
-                                <div class="col-lg-6">
+                                <div class="col-sm-6">
                                     <div class="card experience-card p-4">
                                         <div class="card-body">
                                             <h4><a target="_blank" href="http://www.innovationheaven.com/">Innovation
@@ -347,8 +344,8 @@
                         </div>
                     </section>
                     <section id="portfolio" class="page-section">
-                        <div class="container">
-                            <div class="row">
+                        <div class="container-lg">
+                            <div class="row my-4">
                                 <div class="col">
                                     <h2 class="mb-3">Portfolio</h2>
                                 </div>
@@ -401,8 +398,8 @@
                         </div>
                     </section>
                     <section id="blog" class="page-section">
-                        <div class="container">
-                            <div class="row">
+                        <div class="container-lg">
+                            <div class="row my-4">
                                 <div class="col">
                                     <h2 class="mb-3">Blogs</h2>
                                 </div>
@@ -467,8 +464,8 @@
                         </div>
                     </section>
                     <section id="contact" class="page-section">
-                        <div class="container">
-                            <div class="row">
+                        <div class="container-lg">
+                            <div class="row my-4">
                                 <div class="col">
                                     <h2 class="mb-3">Contact</h2>
                                 </div>
@@ -513,7 +510,7 @@
                             </div>
                         </div>
                     </section>
-                </div>
+                </main>
             </div>
         </div>
     </div>
