change job exprience

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                                                                                                     src="images/egeneration-logo.png"
                                                                                                     alt=""></a>
                                             <!--                                <h4><a target="_blank" href="https://commengine.xyz/">CommEngine</a></h4>-->
-                                            <p>UI Designer & Developer</p>
+                                            <p>UI/UX Design & Developer</p>
                                             <p>Oct 2021 – Running</p>
                                         </div>
 
@@ -266,7 +266,7 @@
                                                                                                     src="images/commengine-logo.png"
                                                                                                     alt=""></a>
                                             <!--                                <h4><a target="_blank" href="https://commengine.xyz/">CommEngine</a></h4>-->
-                                            <p>UI Designer & Developer</p>
+                                            <p>UI/UX Design & Developer</p>
                                             <p>March 2020 – September 2021</p>
                                         </div>
 
@@ -292,7 +292,7 @@
                                                     src="images/quantumcloud-logo.png" alt=""></a>
 
                                             <!--                                <h4><a target="_blank" href="https://commengine.xyz/">CommEngine</a></h4>-->
-                                            <p>UI/UX Design & Developer</p>
+                                            <p>Web Developer</p>
                                             <p>October 2013 – March 2019</p>
                                         </div>
 
@@ -305,7 +305,7 @@
                                                     src="images/web-bangladesh-logo.png" alt=""></a>
 
                                             <!--                                <h4><a target="_blank" href="https://commengine.xyz/">CommEngine</a></h4>-->
-                                            <p>Web Design & Developer</p>
+                                            <p>Web Developer</p>
                                             <p>February 2012 – September 2013</p>
                                         </div>
 
